--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/book_list.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/book_list.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logout</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Book List</title>
 </head>
 <body>
-    <h2>You have been logged out</h2>
-    <p><a href="{% url 'login' %}">Login again</a></p>
-    <p><a href="{% url 'list_books' %}">Go to Books List</a></p>
+    <h1>Book List</h1>
+    <a href="{% url 'create_book' %}">Add a New Book</a>
+    <ul>
+        {% for book in books %}
+            <li>
+                <strong>{{ book.title }}</strong><br>
+                Author: {{ book.author }}<br>
+                Published Date: {{ book.published_date }}<br>
+                ISBN: {{ book.isbn }}<br>
+                <a href="{% url 'edit_book' book.id %}">Edit</a> |
+                <a href="{% url 'delete_book' book.id %}">Delete</a>
+            </li>
+        {% empty %}
+            <li>No books available.</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
